--- a/TimeOnTheTop/MainWindow.xaml
+++ b/TimeOnTheTop/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         ShowInTaskbar="False" WindowStyle="None" Topmost="True"
         Background="Transparent" AllowsTransparency="True"
-        Title="Time on the Top" Height="200" Width="200" Left="0" Top="0">
+        Height="200" Width="200" Left="0" Top="0">
     <StackPanel>
         <TextBlock x:Name="TimeText" IsHitTestVisible="False" Text="Loading..."/>
     </StackPanel>
