--- a/TimeOnTheTop/ConfigWindow.xaml
+++ b/TimeOnTheTop/ConfigWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TimeOnTheTop"
+        xmlns:local="clr-namespace:TimeOnTheTop" 
+        xmlns:system="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
         KeyUp="Window_OnKey" KeyDown="Window_OnKey"
         Height="450" Width="800">
@@ -36,6 +37,11 @@
         </Style>
         <Style TargetType="Slider" BasedOn="{StaticResource {x:Type Slider}}">
             <Setter Property="Margin" Value="5"/>
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="AutoToolTipPlacement" Value="TopLeft"/>
+            <Setter Property="AutoToolTipPrecision" Value="1"/>
+            <Setter Property="IsMoveToPointEnabled" Value="True"/>
+            <Setter Property="Orientation" Value="Horizontal"/>
             <EventSetter Event="ValueChanged" Handler="OnValueChanged"/>
         </Style>
         <Style TargetType="Rectangle" x:Key="LocalRectangle">
@@ -49,6 +55,7 @@
         <!-- resources -->
         <Color x:Key="Color1"/>
         <Color x:Key="Color2"/>
+        <Color x:Key="ColorShadow"/>
         <SolidColorBrush x:Key="PreviewColor1" Color="{DynamicResource Color1}"/>
         <SolidColorBrush x:Key="PreviewColor2" Color="{DynamicResource Color2}"/>
         <LinearGradientBrush x:Key="PreviewGradient" StartPoint="0 0" EndPoint="1 0">
@@ -57,6 +64,7 @@
                 <GradientStop Offset="1" Color="{DynamicResource Color2}"/>
             </LinearGradientBrush.GradientStops>
         </LinearGradientBrush>
+        <SolidColorBrush x:Key="PreviewColorShadow" Color="{DynamicResource ColorShadow}"/>
 
     </Window.Resources>
 
@@ -65,6 +73,7 @@
 
         <!-- settings -->
         <StackPanel DockPanel.Dock="Top" Margin="5" Orientation="Vertical" CanVerticallyScroll="True">
+
             <TextBlock Text="文本样式" FontWeight="Bold" FontSize="16"/>
             <DockPanel>
                 <TextBlock Text="字体"/>
@@ -107,12 +116,13 @@
                 <TextBox x:Name="TextBoxFontSize" MaxLines="1" TextWrapping="NoWrap" Width="50"
                          PreviewTextInput="TextBoxFontSize_OnPreviewTextInput"
                          TextChanged="TextBoxFontSize_OnTextChanged"/>
-                <Slider x:Name="SliderFontSize" HorizontalAlignment="Stretch" Orientation="Horizontal"
+                <Slider x:Name="SliderFontSize" Width="Auto" AutoToolTipPlacement="None"
                         Minimum="9.9" Maximum="100.0" TickFrequency="1.0" IsSnapToTickEnabled="True"
                         ValueChanged="SliderFontSize_OnValueChanged"/>
             </DockPanel>
-            <TextBlock Text="颜色" FontWeight="Bold" FontSize="16"/>
-            <DockPanel Height="48" LastChildFill="True">
+
+            <TextBlock Text="文本颜色" FontWeight="Bold" FontSize="16"/>
+            <DockPanel LastChildFill="True">
                 <Button Click="ButtonColor1_OnClick">
                     <StackPanel Orientation="Horizontal">
                         <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColor1}"/>
@@ -125,7 +135,7 @@
                         <TextBlock Text="颜色B"/>
                     </StackPanel>
                 </Button>
-                <TextBlock Text="使用渐变色"/>
+                <TextBlock Text="启用线性渐变"/>
                 <CheckBox x:Name="CheckBoxEnableGradient"/>
                 <Rectangle>
                     <Rectangle.Style>
@@ -140,6 +150,25 @@
                     </Rectangle.Style>
                 </Rectangle>
             </DockPanel>
+
+            <TextBlock Text="阴影样式" FontWeight="Bold" FontSize="16"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="启用阴影"/>
+                <CheckBox x:Name="CheckBoxEnableShadow"/>
+                <Button Click="ButtonColorShadow_OnClick" Width="96">
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColorShadow}"/>
+                        <TextBlock Text="阴影颜色"/>
+                    </StackPanel>
+                </Button>
+                <TextBlock Text="模糊半径(dp)"/>
+                <Slider x:Name="SliderShadowBlurRadius" Minimum="0.0" Maximum="50.0"/>
+                <TextBlock Text="不透明度(%)"/>
+                <Slider x:Name="SliderShadowOpacity" Minimum="0.0" Maximum="100.0"/>
+                <TextBlock Text="深度(dp)"/>
+                <Slider x:Name="SliderShadowDepth" Minimum="0.0" Maximum="20.0"/>
+            </StackPanel>
+
             <!-- TODO options -->
         </StackPanel>
 
