add: scroll support for config

--- a/TimeOnTheTop/ConfigWindow.xaml
+++ b/TimeOnTheTop/ConfigWindow.xaml
@@ -18,6 +18,8 @@
 
         <!-- control styles -->
         <Style TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal"/>
+        </Style>
         <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Width" Value="80"/>
@@ -74,107 +76,112 @@
     </Window.Resources>
 
     <!-- main layout -->
-    <DockPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="46"/>
+        </Grid.RowDefinitions>
 
         <!-- settings -->
-        <StackPanel DockPanel.Dock="Top" Margin="5" Orientation="Vertical" CanVerticallyScroll="True">
+        <ScrollViewer Grid.Row="0" CanContentScroll="False" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Visible">
+            <StackPanel Orientation="Vertical" Margin="5,5,-5,5">
 
-            <TextBlock Text="文本样式" FontWeight="Bold" FontSize="16"/>
-            <DockPanel>
-                <TextBlock Text="字体"/>
+                <TextBlock Text="文本样式" FontWeight="Bold" FontSize="16"/>
+                <DockPanel>
+                    <TextBlock Text="字体"/>
                     <ComboBox x:Name="ComboBoxFont" Width="180" SelectionChanged="ComboBoxFont_OnSelectionChanged"
                               ItemsSource="{Binding Source={x:Static Fonts.SystemFontFamilies}}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}" FontFamily="{Binding}"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-                <TextBlock Text="字重"/>
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding}" FontFamily="{Binding}"/>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <TextBlock Text="字重"/>
                     <ComboBox x:Name="ComboBoxFontWeight" Width="100">
-                    <x:Static Member="FontWeights.Black"/>
-                    <x:Static Member="FontWeights.Bold"/>
-                    <!-- <x:Static Member="FontWeights.DemiBold"/> -->
-                    <!-- <x:Static Member="FontWeights.ExtraBlack"/> -->
-                    <!-- <x:Static Member="FontWeights.ExtraBold"/> -->
-                    <!-- <x:Static Member="FontWeights.ExtraLight"/> -->
-                    <!-- <x:Static Member="FontWeights.Heavy"/> -->
-                    <x:Static Member="FontWeights.Light"/>
-                    <x:Static Member="FontWeights.Medium"/>
-                    <!-- <x:Static Member="FontWeights.Normal"/> -->
-                    <x:Static Member="FontWeights.Regular"/>
-                    <!-- <x:Static Member="FontWeights.SemiBold"/> -->
-                    <x:Static Member="FontWeights.Thin"/>
-                    <!-- <x:Static Member="FontWeights.UltraBlack"/> -->
-                    <!-- <x:Static Member="FontWeights.UltraBold"/> -->
-                    <!-- <x:Static Member="FontWeights.UltraLight"/> -->
-                </ComboBox>
+                        <x:Static Member="FontWeights.Black"/>
+                        <x:Static Member="FontWeights.Bold"/>
+                        <!-- <x:Static Member="FontWeights.DemiBold"/> -->
+                        <!-- <x:Static Member="FontWeights.ExtraBlack"/> -->
+                        <!-- <x:Static Member="FontWeights.ExtraBold"/> -->
+                        <!-- <x:Static Member="FontWeights.ExtraLight"/> -->
+                        <!-- <x:Static Member="FontWeights.Heavy"/> -->
+                        <x:Static Member="FontWeights.Light"/>
+                        <x:Static Member="FontWeights.Medium"/>
+                        <!-- <x:Static Member="FontWeights.Normal"/> -->
+                        <x:Static Member="FontWeights.Regular"/>
+                        <!-- <x:Static Member="FontWeights.SemiBold"/> -->
+                        <x:Static Member="FontWeights.Thin"/>
+                        <!-- <x:Static Member="FontWeights.UltraBlack"/> -->
+                        <!-- <x:Static Member="FontWeights.UltraBold"/> -->
+                        <!-- <x:Static Member="FontWeights.UltraLight"/> -->
+                    </ComboBox>
                     <TextBlock Text="对齐"/>
                     <ComboBox x:Name="ComboBoxTextAlignment" Width="80">
-                    <x:Static Member="TextAlignment.Left"/>
-                    <x:Static Member="TextAlignment.Right"/>
-                    <x:Static Member="TextAlignment.Center"/>
-                </ComboBox>
-                <TextBlock Text="字号"/>
-                <TextBox x:Name="TextBoxFontSize" MaxLines="1" TextWrapping="NoWrap" Width="50"
+                        <x:Static Member="TextAlignment.Left"/>
+                        <x:Static Member="TextAlignment.Right"/>
+                        <x:Static Member="TextAlignment.Center"/>
+                    </ComboBox>
+                    <TextBlock Text="字号"/>
+                    <TextBox x:Name="TextBoxFontSize" MaxLines="1" TextWrapping="NoWrap" Width="50"
                              PreviewTextInput="TextBox_OnPreviewTextInput_Double"
-                         TextChanged="TextBoxFontSize_OnTextChanged"/>
-                <Slider x:Name="SliderFontSize" Width="Auto" AutoToolTipPlacement="None"
-                        Minimum="9.9" Maximum="100.0" TickFrequency="1.0" IsSnapToTickEnabled="True"
-                        ValueChanged="SliderFontSize_OnValueChanged"/>
-            </DockPanel>
+                             TextChanged="TextBoxFontSize_OnTextChanged"/>
+                    <Slider x:Name="SliderFontSize" Width="Auto" AutoToolTipPlacement="None"
+                            Minimum="9.9" Maximum="100.0" TickFrequency="1.0" IsSnapToTickEnabled="True"
+                            ValueChanged="SliderFontSize_OnValueChanged"/>
+                </DockPanel>
 
-            <TextBlock Text="文本颜色" FontWeight="Bold" FontSize="16"/>
-            <DockPanel LastChildFill="True">
-                <Button Click="ButtonColor1_OnClick">
-                    <StackPanel Orientation="Horizontal">
-                        <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColor1}"/>
-                        <TextBlock Text="颜色A"/>
-                    </StackPanel>
-                </Button>
-                <Button Click="ButtonColor2_OnClick">
-                    <StackPanel Orientation="Horizontal">
-                        <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColor2}"/>
-                        <TextBlock Text="颜色B"/>
-                    </StackPanel>
-                </Button>
-                <TextBlock Text="启用线性渐变"/>
-                <CheckBox x:Name="CheckBoxEnableGradient"/>
-                <Rectangle>
-                    <Rectangle.Style>
-                        <Style TargetType="Rectangle" BasedOn="{StaticResource LocalRectangle}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding ElementName=CheckBoxEnableGradient,Path=IsChecked}" Value="True">
-                                    <Setter Property="Fill" Value="{DynamicResource PreviewGradient}"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                            <Setter Property="Fill" Value="{DynamicResource PreviewColor1}"/>
-                        </Style>
-                    </Rectangle.Style>
-                </Rectangle>
-            </DockPanel>
+                <TextBlock Text="文本颜色" FontWeight="Bold" FontSize="16"/>
+                <DockPanel LastChildFill="True">
+                    <Button Click="ButtonColor1_OnClick">
+                        <StackPanel Orientation="Horizontal">
+                            <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColor1}"/>
+                            <TextBlock Text="颜色A"/>
+                        </StackPanel>
+                    </Button>
+                    <Button Click="ButtonColor2_OnClick">
+                        <StackPanel Orientation="Horizontal">
+                            <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColor2}"/>
+                            <TextBlock Text="颜色B"/>
+                        </StackPanel>
+                    </Button>
+                    <TextBlock Text="启用线性渐变"/>
+                    <CheckBox x:Name="CheckBoxEnableGradient"/>
+                    <Rectangle>
+                        <Rectangle.Style>
+                            <Style TargetType="Rectangle" BasedOn="{StaticResource LocalRectangle}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=CheckBoxEnableGradient,Path=IsChecked}" Value="True">
+                                        <Setter Property="Fill" Value="{DynamicResource PreviewGradient}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                                <Setter Property="Fill" Value="{DynamicResource PreviewColor1}"/>
+                            </Style>
+                        </Rectangle.Style>
+                    </Rectangle>
+                </DockPanel>
 
-            <TextBlock Text="阴影样式" FontWeight="Bold" FontSize="16"/>
+                <TextBlock Text="阴影样式" FontWeight="Bold" FontSize="16"/>
                 <StackPanel>
-                <TextBlock Text="启用阴影"/>
-                <CheckBox x:Name="CheckBoxEnableShadow"/>
-                <Button Click="ButtonColorShadow_OnClick" Width="96">
-                    <StackPanel Orientation="Horizontal">
-                        <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColorShadow}"/>
-                        <TextBlock Text="阴影颜色"/>
-                    </StackPanel>
-                </Button>
-                <TextBlock Text="不透明度(%)"/>
-                <Slider x:Name="SliderShadowOpacity" Minimum="0.0" Maximum="100.0"/>
-            </StackPanel>
+                    <TextBlock Text="启用阴影"/>
+                    <CheckBox x:Name="CheckBoxEnableShadow"/>
+                    <Button Click="ButtonColorShadow_OnClick" Width="96">
+                        <StackPanel Orientation="Horizontal">
+                            <Rectangle Width="12" Height="12" Fill="{DynamicResource PreviewColorShadow}"/>
+                            <TextBlock Text="阴影颜色"/>
+                        </StackPanel>
+                    </Button>
+                    <TextBlock Text="不透明度(%)"/>
+                    <Slider x:Name="SliderShadowOpacity" Minimum="0.0" Maximum="100.0"/>
+                </StackPanel>
                 <StackPanel Height="32">
-                <TextBlock Text="模糊半径(dp)"/>
-                <Slider x:Name="SliderShadowBlurRadius" Minimum="0.0" Maximum="50.0"/>
-                <TextBlock Text="深度(dp)"/>
-                <Slider x:Name="SliderShadowDepth" Minimum="0.0" Maximum="20.0"/>
-                <TextBlock Text="方向(°)"/>
-                <Slider x:Name="SliderShadowDirection" Minimum="0.0" Maximum="360.0"/>
-            </StackPanel>
+                    <TextBlock Text="模糊半径(dp)"/>
+                    <Slider x:Name="SliderShadowBlurRadius" Minimum="0.0" Maximum="50.0"/>
+                    <TextBlock Text="深度(dp)"/>
+                    <Slider x:Name="SliderShadowDepth" Minimum="0.0" Maximum="20.0"/>
+                    <TextBlock Text="方向(°)"/>
+                    <Slider x:Name="SliderShadowDirection" Minimum="0.0" Maximum="360.0"/>
+                </StackPanel>
 
                 <StackPanel Margin="0,5,0,0">
                     <TextBlock Text="高级显示选项" FontWeight="Bold" FontSize="16"/>
@@ -191,14 +198,16 @@
                     <TextBox x:Name="TextBoxExpression" Width="Auto"/>
                 </DockPanel>
 
-            <!-- TODO options -->
-        </StackPanel>
+                <!-- TODO options -->
+            </StackPanel>
+        </ScrollViewer>
 
         <!-- bottom bar -->
-        <StackPanel DockPanel.Dock="Bottom" Height="46" VerticalAlignment="Bottom" Background="#4888">
-            <DockPanel Margin="5" Height="36" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <TextBlock DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="AppNameLabel"/>
-                <StackPanel DockPanel.Dock="Right" HorizontalAlignment="Right" Orientation="Horizontal">
+        <StackPanel Grid.Row="1" Background="#4888" Orientation="Vertical"
+                    VerticalAlignment="Bottom" HorizontalAlignment="Stretch">
+            <DockPanel Margin="5" Height="36">
+                <TextBlock x:Name="AppNameLabel"/>
+                <StackPanel HorizontalAlignment="Right">
                     <Button Content="确定" Click="ButtonOK_OnClick"/>
                     <Button Content="取消" Click="ButtonCancel_OnClick" x:Name="ButtonCancel"/>
                     <Button Content="应用" Click="ButtonApply_OnClick" IsEnabled="False" x:Name="ButtonApply"/>
@@ -206,6 +215,6 @@
             </DockPanel>
         </StackPanel>
 
-    </DockPanel>
+    </Grid>
 
 </Window>
